# task1

./: CMakeLists.txt  main.cpp
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt
